<resources>

    <!-- Main Content -->
    <string name="app_name">Parquimetro MX</string>
    <string name="cero">00:00:00</string>
    <string name="horaCero">00:00</string>
    <string name="Horavencimiento">Hora</string>
    <string name="minutes">Minutos</string>
    <string name="iniciar">Iniciar</string>
    <string name="cancelar">Cancelar</string>
    <string name="msgLimiteTiempo">El tiempo es menor al limite de tiempo establecido.</string>
    <string name="msgHoraVencMenor">La hora de vencimiento no puede ser igual o menor a la hora de actual</string>
    <string name="msgPermissionDeniedLocation">Necesita dar permisos de Localizacion</string>
    <string name="msg_falta_dato">Introduce un valor valido</string>
    <string name="switchText">Ubicación del coche</string>
    <string name="descripLogo">Logo</string>
    <string name="vibrador">Vibrador</string>
    <string name="sonido">Sonido</string>
    <string name="distancia">Distancia</string>

    <string name="facebook_app_id">484673925349795</string>
    <string name="fb_login_protocol_scheme">fb[484673925349795]</string>


    <string name="msj_dialog_data">Seleciona el formato que desea introducir.</string>

    <string name="cinco">5</string>
    <string name="dies">10</string>
    <string name="quince">15</string>
    <string name="veinte">20</string>

    <string name="noInternet">Debes de tener acceso a internet para utilizar esta función.</string>
    <string name="noGps">Activa tu localización para activar esta opción.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu Navigation Drawer-->
    <string name="parking1">Parquimetro</string>
    <string name="parking2">Tipo 2</string>
    <string name="alarma">Alarma</string>
    <string name="compras">Compras</string>
    <string name="compartir">Compartir</string>
    <string name="cuentaleAmigo">Cuentale a un amigo</string>


    <!-- Notification -->
    <string name="charging_reminder_notification_title">! Hora de ir por tu automóvil !</string>
    <string name="charging_reminder_notification_body">Es hora de ir por tu automóvil.Que no te pongan la araña, evita costosas multas. </string>

    <!-- Dialog alarm -->
    <string name="configAlarm">Avisarme %1$s minutos antes. </string>
    <string name="btn_guardar_dialog_alarm">Guardar</string>
    <string name="msg_check_switch_alert">Al menos una opción debe de estar habilitada (Vibrador o Sonido)</string>
    <string name="titleSound">Selecciona un tono</string>


    <!-- AdMob -->

    <string name="banner_ad_unit_id">ca-app-pub-2449148181464779~1658655246</string>
    <string name="banner_intersticial">ca-app-pub-2449148181464779/7425987245</string>
    <string name="banner">ca-app-pub-2449148181464779/5005414441</string>
    <string name="banner_2">ca-app-pub-2449148181464779/3117735242</string>
    <string name="banner_intersticial_2">ca-app-pub-2449148181464779/7547934849</string>
    <string name="banner_intersticial2019">ca-app-pub-2449148181464779/3052148916</string>

    <!-- Splash -->

    <string name="btn_suscribir">Suscribirse</string>
    <string name="descripcion">Descripción</string>



    <string name="alert_already_purchased">El artículo ya está comprado</string>
    <string name="button_own">Lo tienes</string>
    <string name="button_change">Cambiar</string>s
    <string name="header_inapp">Compras</string>
    <string name="header_subscriptions">Suscripciones</string>


    <string name="error_no_skus">No encontramos ningún SKU para mostrar&#8230; Compruebe su internet
         conexión</string>
    <string name="error_billing_unavailable">La facturación no está disponible. Asegúrate de que tu aplicación Google Play
         está configurado correctamente</string>
    <string name="error_billing_default">La facturación no está disponible. Por favor revisa tu dispositivo.</string>

    <!-- Dialog Munitos -->
    <string name="dialog_title_minutos">Introduce los minutos</string>
    <string name="btnAceptar">Aceptar</string>

    <string name="notify_title">Recordatorio de pago</string>
    <string name="notify_content">Recuerda realizar tus pagos</string>
    <string name="dialog_notify_title">¡ Recibe notificaciones !</string>
    <string name="dialog_notify_desc">Activa las notificaciones para \nrecibir recordatorios de tu parquimetro</string>
    <string name="dialog_notify_desc2">Que no te vuelvan a multar.</string>
    <string name="dialog_notify_skip">Saltar</string>
    <string name="dialog_notify_continue">Deacuerdo</string>
    <string name="dialog_dayli_message">¡Hola!, recuerda registrar todos tus pagos del día, aquí estamos para ayudarte.</string>


</resources>
