<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_parking1"
            android:icon="@drawable/nav_parking_1"
            android:title="@string/parking1" />
        <item
            android:id="@+id/nav_parking2"
            android:icon="@drawable/nav_parking_2"
            android:title="@string/parking2" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/alarm_black"
            android:title="@string/alarma" />
        <item
            android:id="@+id/nav_findcar"
            android:icon="@drawable/map_marker_radius"
            android:title="@string/findCar" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/compartir" />

        </menu>
    </item>

</menu>
