<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialogAlarmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_title_minutos"
        android:textSize="@dimen/size_title_dialog_alarm"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutHoraVenceType2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/minutes"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogAlarmTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextMinutos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="@dimen/sizeTextSwitch" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCancelar"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/cancelar"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHoraVenceType2" />

    <Button
        android:id="@+id/btnAceptar"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/btnCancelar"
        android:text="@string/btnAceptar"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCancelar"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar" />
</androidx.constraintlayout.widget.ConstraintLayout>