<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ParkingType2Fragment">

    <RelativeLayout
        android:id="@+id/relativeMainType2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <RelativeLayout
            android:id="@+id/relativeContentCountType2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/contadorType2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/cero"
                android:textAlignment="center"
                android:textSize="@dimen/ContadorSize"
                android:textStyle="normal" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeDetailsType2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeContentCountType2">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchLocationType2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd"
                app:switchPadding="20dp"
                android:text="@string/switchText"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnInicioType2"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btnCancelarType2"
                android:text="@string/iniciar"
                android:textSize="@dimen/subtitle"
                android:textStyle="bold"
                android:layout_below="@id/switchLocationType2"/>

            <Button
                android:id="@+id/btnCancelarType2"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/cancelar"
                android:textSize="@dimen/subtitle"
                android:textStyle="bold"
                android:layout_below="@id/switchLocationType2"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutHoraVenceType2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/minutes"
                android:layout_below="@id/switchLocationType2">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextHoraVenceType2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="@dimen/sizeTextSwitch"/>

            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeMapType2"
            android:layout_below="@id/relativeDetailsType2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/mapType2"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.sesi.chris.googlemapslocation.MapsActivity" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewType2"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId = "@string/banner_2"
                android:layout_above="@+id/relativeDatosType2"
                android:layout_alignParentStart="true" />

            <RelativeLayout
                android:visibility="invisible"
                android:id="@+id/relativeDatosType2"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/marginTop"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightDetails"
                android:background="@drawable/custom_button">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tvDatosType2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Distancia"
                    android:textSize="@dimen/subtitle"
                    android:textColor="@android:color/white"/>


            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>


</FrameLayout>
