<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.HomeFragment">

    <RelativeLayout
        android:id="@+id/relativeMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



            <RelativeLayout
                android:id="@+id/relativeContentCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/contador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/cero"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/ContadorSize"
                    android:textStyle="bold" />

            </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeContentCount">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:switchPadding="20dp"
                android:text="@string/switchText"
                android:textSize="@dimen/sizeTextSwitch"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Button
                android:id="@+id/btnInicio"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btnCancelar"
                android:text="@string/iniciar"
                android:textSize="@dimen/subtitle"
                android:textStyle="bold"
                android:layout_below="@id/switchLocation"
                app:layout_constraintRight_toLeftOf="@+id/btnCancelar"
                android:layout_marginEnd="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btnCancelar" />

            <Button
                android:id="@+id/btnCancelar"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/cancelar"
                android:textSize="@dimen/subtitle"
                android:textStyle="bold"
                android:layout_below="@id/switchLocation"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/switchLocation" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutHoraVence"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/Horavencimiento"
                android:textColorHint="@color/colorAccent"
                android:layout_below="@id/switchLocation"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/switchLocation"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextHoraVence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/subtitle"
                    android:focusable="false"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/relativeMap"
            android:layout_below="@id/relativeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.sesi.chris.googlemapslocation.MapsActivity" />



            <ImageView
                android:contentDescription="@string/descripcion"
                android:id="@+id/img_publi_no_internet"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone"
                android:src="@drawable/gold_icon"
                android:layout_above="@+id/relativeDatos"
                />

            <RelativeLayout
                android:visibility="invisible"
                android:id="@+id/relativeDatos"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/marginTop"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightDetails"
                android:background="@drawable/custom_button">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tvDatos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distancia"
                    android:textSize="@dimen/subtitle"
                    android:textColor="@android:color/white"/>


            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>


<!--
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_barcode_scan_white_24dp" />
        -->

</FrameLayout>
